# mnasm

./: CMakeLists.txt  README.md
api/: api.hpp  drives.hpp
include/: cmd.hpp  config.hpp  fn.hpp  var.hpp
include/etc/: char.hpp
lib/gethome/: common.h  gethome.h
lib/gethome/linux/: linux.h
lib/gethome/macos/: macos.h
lib/gethome/windows/: win32.h
src/: getconf.cpp  getvar.cpp  main.cpp  mnt.cpp
src/handler/: chdir.cpp  fileio.cpp  mnt.cpp  sys.cpp
src/server/: init.cpp  server.cpp
